fix: spacing between elements in studyyeartop index

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -612,7 +612,7 @@ main > article > * {
 .study-year-top > img {
   height: 15px;
   width: 15px;
-  margin: 3px 5px;
+  padding-left: 30px;
 }
 
 .study-year {
